--- a/Source/WMV_VC100.vcxproj
+++ b/Source/WMV_VC100.vcxproj
@@ -335,8 +335,12 @@ copy Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersi
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="MPQ.cpp" />
+    <ClCompile Include="Settings_Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MPQ.h" />
+    <ClInclude Include="Settings_Main.h" />
     <ClInclude Include="version.h" />
     <CustomBuild Include="application.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
