WMV v0.8.0.0 -Added new forwards-compatibility goal to Dev v8 Goals.txt -Added WoW Directory Manager window. Functionality not yet implemented. -Moved UI files into new UI directory. -Added locale list. -Added WoW Version data. -Added MPQList_Get function that returns a list of MPQ files, based on the passed WoW Version. -About Window now dymanically updates the Content Copyright's year to the current year. -Changed the Content Copyright's start year from 2006 to 2004, which is when WoW was first released. -Changed a lot of the dynamic text on the About Window to better facilitate translation. -Rebuilt .pro/.pri files.
WMV v0.7.0.1
-Changed the Content Copyright's start year from 2006 to 2004, which is when WoW was first released.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -33,7 +33,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 file(GLOB wmv_src *.cpp)
 file(GLOB wmv_h *.h)
-file(GLOB wmv_ui *.ui)
+file(GLOB wmv_ui ui/*.ui)
 
 QT4_WRAP_CPP(wmv_moc ${wmv_h})
 QT4_WRAP_UI(wmv_ui_h ${wmv_ui})
